# rocket-example

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml
migrations/2022-05-12-224329_initial/: up.sql
src/: controller.rs  db.rs  lib.rs  main.rs  model.rs  schema.rs
tests/: posts.rs
