[package]
name = "rocket-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_postgres_pool"] }
diesel = { version = "1", features = ["postgres"] }
diesel_migrations =  { version = "1.4", features = ["postgres"] }

[dev-dependencies]
serde_json = "1.0.81"

